<resources>
    <string name="app_name">Task manager</string>
    <string name="create_event">Create event</string>
    <string name="daily_event">Daily events</string>
    <string name="create_daily_event">Create daily events</string>
    <string name="report">Report</string>
    <string name="to_do_list">To-do list for today</string>
    <string name="all_event_list">All event List</string>
    <string name="next">Next</string>
    <string name="event_description">Event description</string>
    <string name="event_date">Event date</string>
    <string name="event_time">Event time</string>
    <string name="time">Time</string>
    <string name="save_event">Save event</string>
    <string name="event">Event</string>
    <string name="delete_event">Delete event</string>
    <string name="monday">monday</string>
    <string name="tuesday">tuesday</string>
    <string name="wednesday">wednesday</string>
    <string name="thursday">thursday</string>
    <string name="friday">friday</string>
    <string name="saturday">saturday</string>
    <string name="sunday">sunday</string>
</resources>