<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/createContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLayoutBackground"
    android:orientation="vertical">

    <TextView
        android:id="@+id/viewTextCreateEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/topMargin"
        android:text="@string/create_event"
        android:layout_gravity="center"
        android:textSize="@dimen/LargeTextSize"
        android:textColor="@color/colorRed"/>

    <TextView
        android:id="@+id/viewTextDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/topMargin"
        android:text="@string/event_description"
        android:layout_gravity="center"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/MediumTextSize"/>

    <EditText
        android:id="@+id/viewEditDescription"
        android:layout_width="match_parent"
        android:layout_height="@dimen/EditTextSize"
        android:layout_marginStart="@dimen/startMargin"
        android:layout_marginEnd="@dimen/endMargin"
        android:lines="10"
        android:layout_gravity="center"
        android:textSize="@dimen/SmallTextSize"
        android:background="@color/colorWhite"
        android:textColor="@color/colorBlack"/>




    <Button
        android:id="@+id/viewTextEventDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/MediumTextSize"
        android:textColor="@color/colorBlack"
        android:text="@string/event_date"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/topMargin"
        android:padding="5dp"
        android:background="@drawable/my_button"/>

    <Button
        android:id="@+id/viewTextEventTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/topMargin"
        android:padding="5dp"
        android:textSize="@dimen/MediumTextSize"
        android:textColor="@color/colorBlack"
        android:text="@string/event_time"
        android:layout_gravity="center"
        android:background="@drawable/my_button"
        />

    <Button
        android:id="@+id/viewButtonSaveEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/topMargin"
        android:background="@drawable/my_button"
        android:padding="5dp"
        android:text="@string/save_event"
        android:textColor="@color/colorBlack"
         android:radius="3dp"
     android:width="5px" android:color="#000000" />/>
</LinearLayout>