<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/createContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLayoutBackground"
    android:orientation="vertical">

    <TextView
        android:id="@+id/viewTextCreateEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/topMargin"
        android:text="@string/create_daily_event"
        android:layout_gravity="center"
        android:textSize="@dimen/LargeTextSize"
        android:textColor="@color/colorRed"/>

    <TextView
        android:id="@+id/viewTextDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/topMargin"
        android:text="@string/event_description"
        android:layout_gravity="center"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/MediumTextSize"/>

    <EditText
        android:id="@+id/viewEditDailyEventDescription"
        android:layout_width="match_parent"
        android:layout_height="@dimen/DailyEditTextSize"
        android:layout_marginStart="@dimen/startMargin"
        android:layout_marginEnd="@dimen/endMargin"
        android:lines="5"
        android:layout_gravity="center"
        android:textSize="@dimen/SmallTextSize"
        android:background="@color/colorWhite"
        android:textColor="@color/colorBlack"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/buttonMonday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/startMargin"
                android:text="@string/monday"
                android:textSize="@dimen/SmallTextSize"/>
            <CheckBox
                android:id="@+id/buttonTuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/buttonMonday"
                app:layout_constraintStart_toStartOf="@+id/buttonMonday"
                android:text="@string/tuesday"
                android:textSize="@dimen/SmallTextSize"/>
            <CheckBox
                android:id="@+id/buttonWednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/buttonTuesday"
                app:layout_constraintStart_toStartOf="@+id/buttonTuesday"
                android:text="@string/wednesday"
                android:textSize="@dimen/SmallTextSize"/>
            <CheckBox
                android:id="@+id/buttonThursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/buttonWednesday"
                app:layout_constraintStart_toStartOf="@+id/buttonWednesday"
                android:text="@string/thursday"
                android:textSize="@dimen/SmallTextSize"/>
            <CheckBox
                android:id="@+id/buttonFriday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/buttonThursday"
                app:layout_constraintStart_toStartOf="@+id/buttonThursday"
                android:text="@string/friday"
                android:textSize="@dimen/SmallTextSize"/>
            <CheckBox
                android:id="@+id/buttonSaturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/buttonFriday"
                app:layout_constraintStart_toStartOf="@+id/buttonFriday"
                android:text="@string/saturday"
                android:textSize="@dimen/SmallTextSize"/>
            <CheckBox
                android:id="@+id/buttonSunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/buttonSaturday"
                app:layout_constraintStart_toStartOf="@+id/buttonSaturday"
                android:text="@string/sunday"
                android:textSize="@dimen/SmallTextSize"/>

        <TextView
            android:id="@+id/viewMondayTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/buttonMonday"
            app:layout_constraintTop_toTopOf="@+id/buttonMonday"
            app:layout_constraintStart_toEndOf="@+id/buttonMonday"
            android:layout_marginStart="@dimen/startTimeMargin"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="@dimen/SmallTextSize"
            android:textColor="@color/colorBlack"
            android:text="@string/time"
            android:background="@drawable/my_little_button"/>
        <TextView
                android:id="@+id/viewTuesdayTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/buttonTuesday"
            app:layout_constraintTop_toTopOf="@+id/buttonTuesday"
            app:layout_constraintStart_toStartOf="@+id/viewMondayTime"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="@dimen/SmallTextSize"
            android:textColor="@color/colorBlack"
            android:text="@string/time"
            android:background="@drawable/my_little_button"/>
        <TextView
            android:id="@+id/viewWednesdayTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/buttonWednesday"
            app:layout_constraintTop_toTopOf="@+id/buttonWednesday"
            app:layout_constraintStart_toStartOf="@+id/viewMondayTime"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="@dimen/SmallTextSize"
            android:textColor="@color/colorBlack"
            android:text="@string/time"
            android:background="@drawable/my_little_button" />
        <TextView
            android:id="@+id/viewThursdayTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/buttonThursday"
            app:layout_constraintTop_toTopOf="@+id/buttonThursday"
            app:layout_constraintStart_toStartOf="@+id/viewMondayTime"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="@dimen/SmallTextSize"
            android:textColor="@color/colorBlack"
            android:text="@string/time"
            android:background="@drawable/my_little_button" />
        <TextView
            android:id="@+id/viewFridayTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/buttonFriday"
            app:layout_constraintTop_toTopOf="@+id/buttonFriday"
            app:layout_constraintStart_toStartOf="@+id/viewMondayTime"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="@dimen/SmallTextSize"
            android:textColor="@color/colorBlack"
            android:text="@string/time"
            android:background="@drawable/my_little_button" />
        <TextView
            android:id="@+id/viewSaturdayTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/buttonSaturday"
            app:layout_constraintTop_toTopOf="@+id/buttonSaturday"
            app:layout_constraintStart_toStartOf="@+id/viewMondayTime"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="@dimen/SmallTextSize"
            android:textColor="@color/colorBlack"
            android:text="@string/time"
            android:background="@drawable/my_little_button" />
        <TextView
            android:id="@+id/viewSundayTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/buttonSunday"
            app:layout_constraintTop_toTopOf="@+id/buttonSunday"
            app:layout_constraintStart_toStartOf="@+id/viewMondayTime"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="@dimen/SmallTextSize"
            android:textColor="@color/colorBlack"
            android:text="@string/time"
            android:background="@drawable/my_little_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/viewButtonSaveDailyEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/topMargin"
        android:background="@drawable/my_button"
        android:padding="5dp"
        android:text="@string/save_event"
        android:textColor="@color/colorBlack"
         android:radius="3dp"
     android:width="5px" android:color="#000000" />/>
</LinearLayout>